# TuneTailor

./: README.md  pyproject.toml
tunetailor/data/processed/: liked_tracks.json  track_features_pool.json
tunetailor/recommender/: embedding_model.py
tunetailor/tests/: test_recommender.py
