[project]
name = "tunetailor"
version = "0.1.0"
description = "Personalized music recommendation system built to emulate and extend Spotify's music taste modeling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]